--- a/app/templates/filter-charts.html
+++ b/app/templates/filter-charts.html
@@ -1,7 +1,9 @@
 <h3>Filter by Stamina</h3>
+
+<!-- is it worth creating new directive for the ng-repeat just to use the require ^outerDirective 
+	for passing the controller value /scope inside? -->
 <ul>
-	<li ng-repeat"character in characters">
-		{{filter}}
-		<label><input type="checkbox" ng-click=filterCharts(filter) ng-model="filter">{{filter.value}}</label>
+	<li ng-repeat="item in filters">
+		<label><input type="checkbox">{{item}}</label>
 	</li>
 </ul>
