adding filters to remove items

--- a/app/templates/filter-charts.html
+++ b/app/templates/filter-charts.html
@@ -3,7 +3,7 @@
 <!-- is it worth creating new directive for the ng-repeat just to use the require ^outerDirective 
 	for passing the controller value /scope inside? -->
 <ul>
-	<li ng-repeat="item in filters">
-		<label><input type="checkbox">{{item}}</label>
+	<li ng-repeat="item in filters" class="stamina-value">
+		<label>Value:  <input type="checkbox" ng-change="filterCharts(item)" ng-model="item.value"> {{item.stamina}}</label>
 	</li>
 </ul>
