--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -104,6 +104,7 @@ svg, .sliders{
 	clear: both;
 	padding: 20px 0;
 	border-bottom: 1px solid #666;
+
 }
 
 .character-filter{
@@ -112,7 +113,7 @@ svg, .sliders{
 	padding: 10px;
 	margin: 10px;
 	border-radius: 5px;
-	width: 250px;
+	width: 200px;
 }
 
 .character-filter h3{
@@ -122,4 +123,12 @@ svg, .sliders{
 
 .character-filter, .character-controls{
 	float: left;
+}
+
+.character-controls{
+		width: 1240px;
+}
+
+.stamina-value{
+	padding: 5px 0;
 }
